--- a/templates/map.html
+++ b/templates/map.html
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-<h1>Car status and position</h1>
+<h1>Car status and position - old version</h1>
 
 <div class="row">
     <div id="mapid" style="width: 600px; height: 400px;" class="column"></div>
