--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -117,7 +117,7 @@
 </head>
 <body>
 <div class="map_row">
-    <div id="mapid" style="width: 600px; height: 400px;" class="map_column"></div>
+    <div id="mapid" style="width: 70vw; height: 70vh;" class="map_column"></div>
     <div id="status_text" class="map_column"></div>
 </div>
 
