--- a/templates/fio_balance.html
+++ b/templates/fio_balance.html
@@ -1,4 +1,5 @@
-<html><body>
-<h1>{{ title }}</h1>
-There is {{ balance.amount }} {{ balance.currency }} on the account.
-</body></html>
+<html>
+<body>
+<div id="balance">{{ balance.amount }} {{ balance.currency }}</div>
+</body>
+</html>
