--- a/templates/laps_table.html
+++ b/templates/laps_table.html
@@ -1,151 +1,277 @@
-<html><body>
+<!DOCTYPE html>
+<html>
+<head>
 
-<h2>Total</h2>
+   <title>{{ title or "Tesla Data Source Dashboard" }}</title>
 
-{% if items.total %}
-<table border="1">
-<TR>
-   <TH>id</th>
-   <TH>pit start</th>
-   <TH>pit end</th>
-   <TH>lap start</th>
-   <TH>lap end</th>
-   <TH>odo[km]</th>
-   <TH>soc[%]</th>
-   <TH>rng_rated[km]</th>
-   <TH>pit[min]</th>
-   <TH>time[min]</th>
-   <TH>dist[km]</th>
-   <TH>d_rng_rated[km]</th>
-   <TH>speed[km/h]</th>
-   <TH>energy/lap[kW]</th>
-   <TH>energy/hour[kW]</th>
-   <TH>energy_left[kW]</th>
-   <TH>t_out[C]</th>
-    <TH>driver</th>
-</TR>
-<TR>
-   <TD>{{items.total.id}}</TD>
-   <TD>{{items.total.startTimePit}}</TD>
-   <TD>{{items.total.endTimePit}}</TD>
-   <TD>{{items.total.startTime}}</TD>
-   <TD>{{items.total.endTime}}</TD>
-   <TD>{{'%.2f' % items.total.endOdo}}</TD>
-   <TD>{{'%.2f' % items.total.endSOC}}</TD>
-   <TD>{{'%.2f' % items.total.endRangeRated}}</TD>
-   <TD>{{items.total.pitDuration.in_minutes()}}</TD>
-   <TD>{{items.total.duration.in_minutes()}}</TD>
-   <TD>{{'%.2f' % items.total.distance}}</TD>
-   <TD>{{'%.2f' % (items.total.startRangeRated - items.total.endRangeRated)}}</TD>
-   <TD>{{'%.2f' % items.total.avgSpeed}}</TD>
-   <TD>{{'%.2f' % items.total.energy}}</TD>
-   <TD>{{'%.2f' % (items.total.energy / items.total.duration.in_seconds() * 3600)}}</TD>
-   <TD>{{'%.2f' % (items.total.consumptionRated / 100 * items.total.endRangeRated)}}</TD>
-   <TD>{{'%.2f' % items.total.outsideTemp if items.total.outsideTemp != None else "---" }}</TD>
-    <TD>{{items.total.driver_name}}</TD>
-</TR>
-</table>
-{% else %}
-    No data available
-{% endif %}
+   <meta charset="utf-8"/>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h2>Recent lap</h2>
+   <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico"/>
 
-{% if items.recent %}
-<table border="1">
-<TR>
-   <TH>id</th>
-   <TH>pit start</th>
-   <TH>pit end</th>
-   <TH>lap start</th>
-   <TH>lap end</th>
-   <TH>odo[km]</th>
-   <TH>soc[%]</th>
-   <TH>rng_rated[km]</th>
-   <TH>pit[min]</th>
-   <TH>time[min]</th>
-   <TH>dist[km]</th>
-   <TH>d_rng_rated[km]</th>
-   <TH>speed[km/h]</th>
-   <TH>energy/lap[kW]</th>
-   <TH>energy/hour[kW]</th>
-   <TH>energy_left[kW]</th>
-   <TH>t_out[C]</th>
-    <TH>driver</th>
-</TR>
-<TR>
-   <TD>{{items.recent.id}}</TD>
-   <TD>{{items.recent.startTimePit}}</TD>
-   <TD>{{items.recent.endTimePit}}</TD>
-   <TD>{{items.recent.startTime}}</TD>
-   <TD>{{items.recent.endTime}}</TD>
-   <TD>{{'%.2f' % items.recent.endOdo}}</TD>
-   <TD>{{'%.2f' % items.recent.endSOC}}</TD>
-   <TD>{{'%.2f' % items.recent.endRangeRated}}</TD>
-   <TD>{{items.recent.pitDuration.in_minutes()}}</TD>
-    <TD>{{items.recent.duration.in_minutes()}}</TD>
-   <TD>{{'%.2f' % items.recent.distance}}</TD>
-   <TD>{{'%.2f' % (items.recent.startRangeRated - items.recent.endRangeRated)}}</TD>
-   <TD>{{'%.2f' % items.recent.avgSpeed}}</TD>
-   <TD>{{'%.2f' % items.recent.energy}}</TD>
-   <TD>{{'%.2f' % (items.recent.energy / items.recent.duration.in_seconds() * 3600)}}</TD>
-   <TD>{{'%.2f' % (items.recent.consumptionRated / 100 * items.recent.endRangeRated)}}</TD>
-   <TD>{{'%.2f' % items.recent.outsideTemp if items.recent.outsideTemp != None else "---" }}</TD>
-    <TD>{{items.recent.driver_name}}</TD>
-</TR>
-</table>
-{% else %}
-    No data available
-{% endif %}
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+         crossorigin=""/>
+   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+           integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+           crossorigin=""></script>
+   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+           integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-<h2>Previous</h2>
 
-{% if items.previous %}
-<table border="1">
-<TR>
-   <TH>id</th>
-   <TH>pit start</th>
-   <TH>pit end</th>
-   <TH>lap start</th>
-   <TH>lap end</th>
-   <TH>odo[km]</th>
-   <TH>soc[%]</th>
-   <TH>rng_rated[km]</th>
-   <TH>pit[min]</th>
-   <TH>time[min]</th>
-   <TH>dist[km]</th>
-   <TH>d_rng_rated[km]</th>
-   <TH>speed[km/h]</th>
-   <TH>energy/lap[kW]</th>
-   <TH>energy/hour[kW]</th>
-   <TH>energy_left[kW]</th>
-   <TH>t_out[C]</th>
-    <TH>driver</th>
-</TR>
-{% for item in items.previous %}
-<TR>
-   <TD>{{item.id}}</TD>
-   <TD>{{item.startTimePit}}</TD>
-   <TD>{{item.endTimePit}}</TD>
-   <TD>{{item.startTime}}</TD>
-   <TD>{{item.endTime}}</TD>
-   <TD>{{'%.2f' % item.endOdo}}</TD>
-   <TD>{{'%.2f' % item.endSOC}}</TD>
-   <TD>{{'%.2f' % item.endRangeRated}}</TD>
-   <TD>{{item.pitDuration.in_minutes()}}</TD>
-    <TD>{{item.duration.in_minutes()}}</TD>
-   <TD>{{'%.2f' % item.distance}}</TD>
-   <TD>{{'%.2f' % (item.startRangeRated - item.endRangeRated)}}</TD>
-   <TD>{{'%.2f' % item.avgSpeed}}</TD>
-   <TD>{{'%.2f' % item.energy}}</TD>
-   <TD>{{'%.2f' % (item.energy / item.duration.in_seconds() * 3600)}}</TD>
-   <TD>{{'%.2f' % (item.consumptionRated / 100 * item.endRangeRated)}}</TD>
-   <TD>{{'%.2f' % item.outsideTemp if item.outsideTemp != None else "---"}}</TD>
-   <TD>{{item.driver_name}}</TD>
-</TR>
-{% endfor %}
-</table>
-{% else %}
-    No data available
-{% endif %}
-</body></html>
+   <style>
+      .map_column {
+         float: left;
+         /* width: 50%; */
+         padding-left: 40px;
+         padding-right: 40px;
+      }
+
+      .status_text_column {
+         float: left;
+         /* width: 50%; */
+         padding-left: 40px;
+         padding-right: 40px;
+      }
+
+      .section_title {
+         font-weight: bold;
+         padding-top: 10px;
+         padding-bottom: 5px;
+      }
+
+      @media only screen and (min-width: 500px) {
+         .map_row {
+            display: flex;
+         }
+      }
+
+      /* Clear floats after the columns */
+      .map_row:after {
+         content: "";
+         display: table;
+         clear: both;
+      }
+
+      #mapid {
+         width: 70vw;
+         height: 500px;
+         max-height: 70vh;
+      }
+
+      @media only screen and (min-width: 500px) {
+         #mapid {
+            width: 50vw;
+         }
+      }
+
+      div.minimalistBlack {
+         border: 3px solid #000000;
+         /* width: 100%; */
+         text-align: left;
+         border-collapse: collapse;
+      }
+
+      .divTable.minimalistBlack .divTableCell, .divTable.minimalistBlack .divTableHead {
+         border: 1px solid #000000;
+         padding: 5px 4px;
+      }
+
+      .divTable.minimalistBlack .divTableBody .divTableCell {
+         font-size: 13px;
+      }
+
+      .divTable.minimalistBlack .divTableHeading {
+         background: #CFCFCF;
+         background: -moz-linear-gradient(top, #dbdbdb 0%, #d3d3d3 66%, #CFCFCF 100%);
+         background: -webkit-linear-gradient(top, #dbdbdb 0%, #d3d3d3 66%, #CFCFCF 100%);
+         background: linear-gradient(to bottom, #dbdbdb 0%, #d3d3d3 66%, #CFCFCF 100%);
+         border-bottom: 3px solid #000000;
+      }
+
+      .divTable.minimalistBlack .divTableHeading .divTableHead {
+         font-size: 15px;
+         font-weight: bold;
+         color: #000000;
+         text-align: left;
+      }
+
+      .minimalistBlack .tableFootStyle {
+         font-size: 14px;
+      }
+
+      /* DivTable.com */
+      .divTable {
+         display: table;
+      }
+
+      .divTableRow {
+         display: table-row;
+      }
+
+      .divTableHeading {
+         display: table-header-group;
+      }
+
+      .divTableCell, .divTableHead {
+         display: table-cell;
+      }
+
+      .divTableHeading {
+         display: table-header-group;
+      }
+
+      .divTableFoot {
+         display: table-footer-group;
+      }
+
+      .divTableBody {
+         display: table-row-group;
+      }
+
+      #total-lap-div, #recent-lap-div, #previous-laps-div {
+         width: 100%;
+         overflow-x: scroll;
+      }
+
+
+   </style>
+
+</head>
+<body>
+
+<div class="section_title">Total Race Data</div>
+<div id="total-lap-div">
+   <div id="total-lap-table" class="divTable minimalistBlack">
+      <div class="divTableHeading">
+         <div class="divTableRow">
+            <div class="divTableHead"></div>
+         </div>
+      </div>
+      <div class="divTableBody">
+         <div class="divTableRow">
+            <div class="divTableCell"></div>
+         </div>
+      </div>
+   </div>
+</div>
+
+<div class="section_title">Recent Lap Data</div>
+<div id="recent-lap-div">
+   <div id="recent-lap-table" class="divTable minimalistBlack">
+      <div class="divTableHeading">
+         <div class="divTableRow">
+            <div class="divTableHead"></div>
+         </div>
+      </div>
+      <div class="divTableBody">
+         <div class="divTableRow">
+            <div class="divTableCell"></div>
+         </div>
+      </div>
+   </div>
+</div>
+
+<div class="section_title">Previous Laps Data</div>
+<div id="previous-laps-div">
+   <div id="previous-laps-table" class="divTable minimalistBlack">
+      <div class="divTableHeading">
+         <div class="divTableRow">
+            <div class="divTableHead"></div>
+         </div>
+      </div>
+      <div class="divTableBody">
+         <div class="divTableRow">
+            <div class="divTableCell"></div>
+         </div>
+      </div>
+   </div>
+</div>
+
+<script>
+   function getStatusText(car_status_labels) {
+      statusText = "";
+      car_status_labels.forEach(function (item, index) {
+         statusText += `<b>${item.label}</b>: ${item.value}<br/>`;
+      });
+      return statusText;
+   }
+
+   function buildTable(table_id, data) {
+      var tableBody = document.getElementById(table_id);
+      var header_data = data[0];
+
+      $("#" + table_id + " .divTableHeading .divTableRow").html('');
+      $("#" + table_id + " .divTableBody").html('');
+
+      data[0].forEach(function (item, index) {
+         $("#" + table_id + " .divTableHeading .divTableRow").append(`<div class="divTableHead">${item.label}</div>`);
+      });
+
+      data.forEach(function (data_row, index) {
+         $("#" + table_id + " .divTableBody").append(`<div class="divTableRow"></div>`);
+         data_row.forEach(function (item, index) {
+            $("#" + table_id + " .divTableBody .divTableRow:last-child").append(`<div class="divTableCell">${item.value}</div>`);
+         });
+      });
+   }
+
+   $(document).ready(function () {
+
+              (function getStatusJson() {
+                 $.ajax({
+                    url: 'car_status_json',
+                    dataType: 'json',
+                 })
+                         .done(function (data) {
+                            car_status = data
+                            circleMarker.setLatLng(new L.LatLng(car_status.lat, car_status.lon));
+                            circleMarker._popup.setContent(getStatusText(car_status.mapLabels))
+                            $("#status_text").html(getStatusText(car_status.textLabels));
+                            $("#forecast_text").html(getStatusText(car_status.forecastLabels));
+                         })
+                         .fail(function () {
+                            statusText = "No data";
+                            circleMarker._popup.setContent(statusText);
+                            $("#status_text").html(statusText);
+                            $("#forecast_text").html(statusText);
+                         })
+                         .always(function () {
+                            // Schedule the next request when the current one's complete
+                            setTimeout(getStatusJson, {{ 1000 * (config.statusRefreshSeconds or 5) }});
+                         });
+              })();
+
+              (function getLapsJson() {
+                 $.ajax({
+                    url: 'car_laps_json',
+                    dataType: 'json',
+                 })
+                         .done(function (data) {
+                            laps = data
+                            buildTable("total-lap-table", [laps.total]);  // make it list so it's compatible with prev
+                            buildTable("previous-laps-table", laps.previous);
+                            buildTable("recent-lap-table", [laps.recent]);  // make it list so it's compatible with prev
+
+                         })
+                         .fail(function () {
+                            buildTable("total-lap-table", []);  // make it list so it's compatible with prev
+                            buildTable("previous-laps-table", []);
+                            buildTable("recent-lap-table", []);  // make it list so it's compatible with prev
+                         })
+                         .always(function () {
+                            // Schedule the next request when the current one's complete
+                            setTimeout(getLapsJson, {{ 1000* (config.lapsRefreshSeconds or 30) }});
+                         });
+              })();
+
+           }
+
+   )
+   ;
+</script>
+
+<hr/>
+Source code available at <a href="https://github.com/krezac/tesla-data-source" target="_blank">https://github.com/krezac/tesla-data-source</a>
+</body>
+</html>
